--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>fm-music-vue</title>
+    <meta name="referrer" content="never">
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -13,4 +15,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
 </body>
+
 </html>
